# satpaper

./: Cargo.toml  README.md
src/: config.rs  logger.rs  main.rs  slider.rs  wallpaper.rs
