[package]
name = "satpaper"
authors = ["Colonial"]
version = "0.6.1"
edition = "2021"

description = "Display near-real-time satellite imagery on your desktop."
repository = "https://github.com/Colonial-Dev/satpaper"
readme = "README.md"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
# Runtime
anyhow = "1.0.75"
log = "0.4.20"
comat = "0.1.3"

# Compositing
fimg = "0.4.20"
png = "0.17.10"

# Scraping
ureq = "2.7.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
rayon = "1.8.0"
time = { version = "0.3.34", features = ["parsing", "serde", "serde-well-known"] }
time-macros = "0.2.17"
